updated code so that matrices are computed only once

--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "ec7c16cf",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "ee599630-584e-4f41-92a9-efd56a37c5f0",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "5153de77-bb74-4d9b-9247-9de9779a08da",
    "metadata": {},
    "outputs": [],
@@ -126,18 +126,14 @@
     "    return [f0, f1]\n",
     "\n",
     "#define RHS function\n",
-    "def RHS(k, a_n):\n",
-    "    K    = Kij()\n",
-    "    M    = Mij()\n",
-    "    Minv = inv(M)\n",
-    "\n",
+    "def RHS(k, a_n, Minv, K):\n",
     "    return np.dot(Minv, c*np.dot(K, a_n[k])-f(k,a_n))\n",
     "\n",
     "#define evolve() function which returns a_np1 given a_n\n",
-    "def evolve(a_n, a_np1):\n",
+    "def evolve(a_n, a_np1, Minv, K):\n",
     "    #for each element compute a at the next time level\n",
     "    for k in range(N):\n",
-    "        a_np1[k] = a_n[k] + dt*RHS(k, a_n)\n",
+    "        a_np1[k] = a_n[k] + dt*RHS(k, a_n, Minv, K)\n",
     "\n",
     "    return a_np1\n",
     "\n",
@@ -145,8 +141,15 @@
     "#coefficient vector at initial time a_n, and empty\n",
     "#coefficient vector at advanced time a_np1\n",
     "def evolve_TS_steps(TS, a_n, a_np1):\n",
+    "    #compute mass matrix, stiffness matrix, inverse of\n",
+    "    #mass matrix; do this just once per evolution,\n",
+    "    #since these are all constant matrices\n",
+    "    K    = Kij()\n",
+    "    M    = Mij()\n",
+    "    Minv = inv(M)\n",
+    "    \n",
     "    for n in range(TS):\n",
-    "        a_np1 = evolve(a_n, a_np1)\n",
+    "        a_np1 = evolve(a_n, a_np1, Minv, K)\n",
     "        #copy a_np1 into a_n for next timestep\n",
     "        a_n = a_np1\n",
     "\n"
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "f4ff71bc-3d90-45c4-a94f-eead601cb59b",
    "metadata": {},
    "outputs": [],
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "59354886-0adb-4d29-b1f3-9cbbbf1cfbc0",
    "metadata": {},
    "outputs": [],
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "36242a45-9469-4582-83ca-d075b05e274e",
    "metadata": {},
    "outputs": [
