working on writing up explanation of DG tutorial

--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -5,7 +5,91 @@
    "id": "b1decb6f",
    "metadata": {},
    "source": [
-    "# DG tutorial"
+    "# DG Tutorial Part 1: the simplest possible case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306210ab",
+   "metadata": {},
+   "source": [
+    "## Conservation laws\n",
+    "\n",
+    "This notebook is meant to serve as a simple introduction to the **discontinuous Galerkin (DG) method** for solving hyperbolic conservation laws of the form\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial t} \\mathbf{q}(\\mathbf{u}) + \\frac{\\partial}{\\partial x^i} \\mathbf{f}^{i}(\\mathbf{u}) = \\mathbf{S}(\\mathbf{u}).\n",
+    "$$\n",
+    "\n",
+    "In this equation, the quantities $\\mathbf{q}$ are _conserved variables_, $\\mathbf{f}$ are _fluxes_, $\\mathbf{S}$ are _sources_, and all of these terms are functions of a set of _primitive variables_ $\\mathbf{u}$.  Bold font is used to denote the fact that all of the aforementioned terms can be vectors, allowing us to put systems of conservation laws into the form above.\n",
+    "\n",
+    "## 1D scalar advection equation\n",
+    "\n",
+    "In this notebook we will consider the simplest possible case of a conservation law, namely the 1D scalar advection equation\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation} \\tag{1}\n",
+    "\\begin{aligned} \n",
+    "0 &= \\frac{\\partial}{\\partial t} q + \\frac{\\partial}{\\partial x} f(q) \\\\\n",
+    "f(q) &= c q \\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "which has a single scalar conserved variable $q$, the flux is $\\mathbf{f} = c q$ (where $c$ is a constant), there is no source term, and the conserved variable is also our primitive variable.\n",
+    "\n",
+    "To avoid having to specify boundary conditions, we will consider a periodic domain with\n",
+    "\n",
+    "$$\n",
+    "x \\in [0, 1].\n",
+    "$$\n",
+    "\n",
+    "## DG discretization\n",
+    "\n",
+    "### Weak formulation of the PDE\n",
+    "\n",
+    "We will begin by dividing our domain $x \\in [0, 1]$ into $K$ _elements_ which we will index with $k$.  In principle, these elements can all have different sizes, but we will simplify matters by asserting they all have the same size\n",
+    "\n",
+    "$$\n",
+    "\\Delta x \\equiv \\frac{x_{max} - x_{min}}{K} = \\frac{1}{K}.\n",
+    "$$\n",
+    "\n",
+    "Thus each element has extent \n",
+    "\n",
+    "$$\n",
+    "\\Omega_k \\equiv \\big[ x_L, ~x_R \\big] = \\big[ k \\Delta x, ~(k+1) \\Delta x \\big].\n",
+    "$$\n",
+    "\n",
+    "The DG discretization comes from the _weak formulation_ of the PDE, which is obtained by multiplying the PDE (1) by a smooth, compactly supported test function $\\phi$ and integrating over each of the spatial elements:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation} \\tag{2}\n",
+    "\\begin{aligned}\n",
+    "0 &= \\int_{\\Omega_k} \\phi \\, \\frac{\\partial q}{\\partial t} \\, dx + \\int_{\\Omega_k} \\phi \\, \\frac{\\partial f(q)}{\\partial x} \\, dx \\\\\n",
+    "&= \\int_{x_L}^{x_R} \\phi \\, \\frac{\\partial q}{\\partial t} \\, dx + \\big[ f(q) \\, \\phi \\big]^{x_R}_{x_L} - \\int_{x_L}^{x_R} f(q) \\, \\frac{\\partial \\phi}{\\partial x} \\, dx \\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "where we have integrated the spatial derivative term by parts.\n",
+    "\n",
+    "The _weak solution_ to the PDE (1) is defined to be a function $q$ which satisfies (2) _for all smooth, compactly supported test functions $\\phi$_.\n",
+    "\n",
+    "### Deriving the discrete approximation\n",
+    "\n",
+    "We will now consider a vector space $V$ spanned by a complete set of basis functions $\\psi_i$.  The fact that $V$ is complete implies that we can write our PDE solution $q$ as\n",
+    "\n",
+    "$$\n",
+    "q(t,x) = \\sum_{i=0}^{\\infty} a_i(t) \\, \\psi_i \\big[ \\xi(x) \\big],\n",
+    "$$\n",
+    "\n",
+    "so our solution is expressed as a set of time-dependent coefficients $a_i(t)$ times the basis functions $\\psi_i$, which encode the spatial dependence.  Notice that we have allowed $\\psi_i$ to depend on $x$ in a nontrivial way: they depend on $\\xi(x)$, where $\\xi$ is an arbitrary (invertible) function.\n",
+    "\n",
+    "We now produce a discrete approximation to the PDE solution via\n",
+    "$$\n",
+    "\\tilde{q}(t, x) = \\sum_{i=0}^{M} a_i(t) \\, \\psi_i \\big[ \\xi(x) \\big],\n",
+    "$$\n",
+    "so instead of summing over all basis functions in the space $V$, we sum only up to $M$."
    ]
   },
   {
