--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -60,7 +60,7 @@
     "\\Omega_k \\equiv \\big[ x_L, ~x_R \\big] = \\big[ k \\Delta x, ~(k+1) \\Delta x \\big].\n",
     "$$\n",
     "\n",
-    "The DG discretization comes from the _weak formulation_ of the PDE, which is obtained by multiplying the PDE (1) by a smooth, compactly supported test function $\\phi$ and integrating over each of the spatial elements:\n",
+    "The DG discretization comes from the _weak formulation_ of the PDE, which is obtained by multiplying the PDE (1) by a smooth, compactly supported test function $\\phi(x)$ and integrating over each of the spatial elements:\n",
     "\n",
     "$$\n",
     "\\begin{equation} \\tag{2}\n",
@@ -86,10 +86,64 @@
     "so our solution is expressed as a set of time-dependent coefficients $a_i(t)$ times the basis functions $\\psi_i$, which encode the spatial dependence.  Notice that we have allowed $\\psi_i$ to depend on $x$ in a nontrivial way: they depend on $\\xi(x)$, where $\\xi$ is an arbitrary (invertible) function.\n",
     "\n",
     "We now produce a discrete approximation to the PDE solution via\n",
+    "\n",
     "$$\n",
     "\\tilde{q}(t, x) = \\sum_{i=0}^{M} a_i(t) \\, \\psi_i \\big[ \\xi(x) \\big],\n",
     "$$\n",
-    "so instead of summing over all basis functions in the space $V$, we sum only up to $M$."
+    "\n",
+    "so instead of summing over all basis functions in the space $V$, we sum the first $M+1$ of them (note that we start the sum at $i=0$).\n",
+    "\n",
+    "Furthermore, instead of checking all admissible test functions $\\phi$, we will only test the ones that can be written in terms of those $M+1$ basis functions; a simple choice, then, is to take\n",
+    "\n",
+    "$$\n",
+    "\\phi(x) \\equiv \\psi_j(x)\n",
+    "$$\n",
+    "\n",
+    "where $j$ runs from $0$ to $M$.\n",
+    "\n",
+    "Inserting the approximate solution $\\tilde{q}$ in for $q$ and the basis functions $\\psi_j$ in for $\\phi$ in (2) yields\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation} \\tag{3}\n",
+    "\\begin{aligned}\n",
+    "0 &= \\int_{x_L}^{x_R} \\psi_j \\, \\frac{\\partial \\tilde{q}}{\\partial t} \\, dx + \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} - \\int_{x_L}^{x_R} f(\\tilde{q}) \\, \\frac{\\partial \\psi_j}{\\partial x} \\, dx \\\\\n",
+    "&= \\sum_{i=0}^{M} \\frac{\\partial a_i}{\\partial t} \\int_{x_L}^{x_R} \\psi_i \\, \\psi_j \\, dx + \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} - c \\sum_{i=0}^{M} a_i \\int_{x_L}^{x_R} \\psi_i \\, \\frac{\\partial \\psi_j}{\\partial x} \\, dx \\\\\n",
+    "&= \\sum_{i=0}^{M} \\frac{\\partial a_i}{\\partial t} M_{ij} + F_j - c \\sum_{i=0}^{M} a_i K_{ij} \\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "where we have defined the _mass matrix_\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "M_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ x(\\xi) \\big] \\, \\psi_j \\big[ x(\\xi) \\big] \\, dx \\\\\n",
+    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\psi_j(\\xi) \\, J \\, d\\xi \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "where $J \\equiv \\frac{\\partial x}{\\partial \\xi}$ is the jacobian of the coordinate transformation from $x$ to $\\xi$.  Similarly, the _stiffness matrix_ is\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "K_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ x(\\xi) \\big] \\, \\frac{\\partial \\psi_j\\big[ x(\\xi) \\big]}{\\partial x} \\, dx \\\\\n",
+    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\frac{\\partial \\xi}{\\partial x} \\, \\frac{\\partial x}{\\partial \\xi} \\, dx \\\\\n",
+    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, dx \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "where the factor of the jacobian has cancelled with the factor of the inverse jacobian brought in by the spatial derivative term. Finally the flux term is\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "F_{j}  &\\equiv \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} \\\\\n",
+    "&\\to \\big[ \\hat{f}(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $\\hat{f}$ is a numerical flux function, which is defined so that our numerical scheme is able to capture discontinuous (shock) solutions.  \n",
+    "\n",
+    "Here we will use the simple _upwind flux function_, which depends on the flow speed $c$ defined above.  We will restrict to $c > 0$, in which case the flux function in a cell with index $k$ is:\n",
+    "$$\n",
+    "asdfdasd\n",
+    "$$"
    ]
   },
   {
