--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -104,12 +104,21 @@
     "Inserting the approximate solution $\\tilde{q}$ in for $q$ and the basis functions $\\psi_j$ in for $\\phi$ in (2) yields\n",
     "\n",
     "$$\n",
-    "\\begin{equation} \\tag{3}\n",
+    "\\begin{equation}\n",
     "\\begin{aligned}\n",
     "0 &= \\int_{x_L}^{x_R} \\psi_j \\, \\frac{\\partial \\tilde{q}}{\\partial t} \\, dx + \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} - \\int_{x_L}^{x_R} f(\\tilde{q}) \\, \\frac{\\partial \\psi_j}{\\partial x} \\, dx \\\\\n",
     "&= \\sum_{i=0}^{M} \\frac{\\partial a_i}{\\partial t} \\int_{x_L}^{x_R} \\psi_i \\, \\psi_j \\, dx + \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} - c \\sum_{i=0}^{M} a_i \\int_{x_L}^{x_R} \\psi_i \\, \\frac{\\partial \\psi_j}{\\partial x} \\, dx \\\\\n",
     "&= \\sum_{i=0}^{M} \\frac{\\partial a_i}{\\partial t} M_{ij} + F_j - c \\sum_{i=0}^{M} a_i K_{ij} \\\\\n",
+    "&= \\frac{\\partial \\mathbf{a}_i}{\\partial t} \\cdot \\mathbf{M} + \\mathbf{F} - c \\, \\mathbf{a}_i \\cdot \\mathbf{K}, \\\\\n",
     "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "which we can solve for the time derivative of the coefficient vector $\\mathbf{a}$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation} \\tag{3}\n",
+    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( \\mathbf{F} - c \\, \\mathbf{a}_i \\cdot \\mathbf{K} \\Big),\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
@@ -134,16 +143,78 @@
     "$$\n",
     "\\begin{aligned}\n",
     "F_{j}  &\\equiv \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} \\\\\n",
-    "&\\to \\big[ \\hat{f}(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} \\\\\n",
+    "&\\to \\big[ \\hat{f} \\, \\psi_j \\big]^{x_R}_{x_L} \\\\\n",
+    "&= \\hat{f}(x_R) \\psi_j(x_R) - \\hat{f}(x_L) \\psi_j(x_L) \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
     "where $\\hat{f}$ is a numerical flux function, which is defined so that our numerical scheme is able to capture discontinuous (shock) solutions.  \n",
     "\n",
     "Here we will use the simple _upwind flux function_, which depends on the flow speed $c$ defined above.  We will restrict to $c > 0$, in which case the flux function in a cell with index $k$ is:\n",
+    "\n",
     "$$\n",
-    "asdfdasd\n",
-    "$$"
+    "\\hat{f}_{k}(x_L) = c \\tilde{q}_{k-1}(x_R), ~~~ \\hat{f}_{k}(x_R) = c \\tilde{q}_{k}(x_R).\n",
+    "$$\n",
+    "\n",
+    "### Fixing the basis functions\n",
+    "\n",
+    "For the sake of simplicity, we will consider the basis of monomials ($\\psi_j \\sim x^j$) and we will only consider the first two basis functions, so $M = 1$.  We will write these basis functions as\n",
+    "$$\n",
+    "\\psi_0(\\xi) = 1 - \\xi, ~~~ \\psi_1(\\xi) = \\xi,\n",
+    "$$\n",
+    "where $\\xi \\in [0,1]$.\n",
+    "\n",
+    "The map from the coordinate $\\xi$ to $x$ is given by\n",
+    "$$\n",
+    "x(\\xi) = x_L + \\xi(x_R - x_L) = k \\, \\Delta x + \\xi \\, \\Delta x,\n",
+    "$$\n",
+    "which implies the jacobian is\n",
+    "$$\n",
+    "J \\equiv \\frac{\\partial x}{\\partial \\xi} = \\Delta x.\n",
+    "$$\n",
+    "\n",
+    "Inserting the two basis functions into the definition of the mass matrix yields\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "M_{ij} &= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\psi_j(\\xi) \\, J \\, d\\xi \\\\\n",
+    "&= \\Delta x \\int_0^1 \\psi_i(\\xi) \\psi_j(\\xi) \\, d\\xi \\\\\n",
+    "\\implies \\mathbf{M} &= \\frac{\\Delta x}{6}\n",
+    "\\begin{pmatrix}\n",
+    "2 & 1 \\\\\n",
+    "1 & 2\n",
+    "\\end{pmatrix}.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Doing the same for the stiffness matrix gives us\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "K_{ij} &= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, dx \\\\\n",
+    "&= \\int_0^1 \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, d\\xi \\\\\n",
+    "\\implies \\mathbf{K} &= \\frac{1}{2}\n",
+    "\\begin{pmatrix}\n",
+    "-1 & 1 \\\\\n",
+    "-1 & 1\n",
+    "\\end{pmatrix}\n",
+    "\\end{aligned}.\n",
+    "$$\n",
+    "\n",
+    "Finally the flux term is\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "F_j &= \\hat{f}(x_R) \\psi_j(x_R) - \\hat{f}(x_L) \\psi_j(x_L) \\\\\n",
+    "&= c \\tilde{q}_k(x_R) \\psi_j(x_R) - c \\tilde{q}_{k-1}(x_R) \\psi_j(x_L) \\\\\n",
+    "&= c \\tilde{q}_k(x_R) \\delta_{j,1} - c \\tilde{q}_{k-1}(x_R) \\delta_{j,0} \\\\\n",
+    "\\implies \\mathbf{F} &= \n",
+    "\\begin{pmatrix}\n",
+    "-c \\tilde{q}_{k-1}(x_R) \\\\\n",
+    "c \\tilde{q}_{k}(x_R)\n",
+    "\\end{pmatrix},\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "where we have used the fact that $\\psi_0(x_R) = \\psi_1(x_L) = 0$ and $\\psi_0(x_L) = \\psi_1(x_R) = 1$ to arrive at the third line."
    ]
   },
   {
