still working on the tutorial

--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -156,9 +156,87 @@
     "\\hat{f}_{k}(x_L) = c \\tilde{q}_{k-1}(x_R), ~~~ \\hat{f}_{k}(x_R) = c \\tilde{q}_{k}(x_R).\n",
     "$$\n",
     "\n",
+    "Notice that of the terms in (3), $\\mathbf{F}$ is the only one that couples adjacent elements; all of the other terms ($\\mathbf{M}, \\mathbf{K}$) are computed strictly using quantities _within_ a given cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e592c26",
+   "metadata": {},
+   "source": [
+    "## Building the solver\n",
+    "\n",
+    "Now that we've derived the semidiscrete solution scheme, (3), we will choose a set of basis functions $\\phi_j$ and we will build a simple DG solver for the 1D scalar advection equation.\n",
+    "\n",
+    "Below we begin by importing a few useful libraries and functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ec7c16cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define imports\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as pl\n",
+    "from scipy.integrate import quad\n",
+    "from numpy.linalg import inv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdf60400",
+   "metadata": {},
+   "source": [
+    "### Define grid parameters\n",
+    "\n",
+    "Next, we'll define the numerical grid by specifying the CFL number, the total number of timesteps we'll evolve the system through, the minimum and maximum $x$ values, the number of elements $N$, the cell boundaries, and the speed in the advection equation, $c$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "41c8e762",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define CFL\n",
+    "CFL = 0.05\n",
+    "\n",
+    "#define number of timesteps, TS\n",
+    "TS = 250\n",
+    "\n",
+    "#set up grid\n",
+    "xMax = 1.\n",
+    "xMin = 0.\n",
+    "\n",
+    "#define number of elements\n",
+    "N = 75\n",
+    "\n",
+    "#define size of a cell, dx\n",
+    "dx = (xMax-xMin)/N\n",
+    "dt = CFL * dx\n",
+    "\n",
+    "#index cells from k = 0 to N; cell boundary is at (k*dx, [k+1]*dx); define array of boundaries cbound\n",
+    "cbound = [k*dx for k in range(N+1)]\n",
+    "\n",
+    "#define wave speed c\n",
+    "c = 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75398a57-59a7-4b62-8e6e-403062849010",
+   "metadata": {},
+   "source": [
     "### Fixing the basis functions\n",
     "\n",
-    "For the sake of simplicity, we will consider the basis of monomials ($\\psi_j \\sim x^j$) and we will only consider the first two basis functions, so $M = 1$.  We will write these basis functions as\n",
+    "Now we will fix the basis functions.\n",
+    "\n",
+    "For the sake of simplicity, we will consider the basis of monomials ($\\psi_j \\sim \\xi^j$) and we will only consider the first two basis functions, so $M = 1$.  We will write these basis functions as\n",
     "$$\n",
     "\\psi_0(\\xi) = 1 - \\xi, ~~~ \\psi_1(\\xi) = \\xi,\n",
     "$$\n",
@@ -171,9 +249,49 @@
     "which implies the jacobian is\n",
     "$$\n",
     "J \\equiv \\frac{\\partial x}{\\partial \\xi} = \\Delta x.\n",
-    "$$\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "51336776",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define basis functions\n",
+    "def psi0(xi):\n",
+    "    return 1-xi\n",
     "\n",
-    "Inserting the two basis functions into the definition of the mass matrix yields\n",
+    "def psi1(xi):\n",
+    "    return xi\n",
+    "\n",
+    "#define analytic derivatives of basis functions\n",
+    "def psi0P(xi):\n",
+    "    return -1\n",
+    "\n",
+    "def psi1P(xi):\n",
+    "    return 1\n",
+    "\n",
+    "#define Jacobian\n",
+    "def J():\n",
+    "    return dx\n",
+    "\n",
+    "#define x(k, xi), where k is the index of the cell\n",
+    "def x(k, xi):\n",
+    "    return k*dx + xi*dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36a41f96",
+   "metadata": {},
+   "source": [
+    "## Computing the terms in (3)\n",
+    "\n",
+    "Given the grid, coordinate map $x(\\xi)$, the jacobian, the basis functions $\\phi_j$, and their derivatives, we can compute the mass and stiffness matrices.  \n",
+    "\n",
+    "Starting with the mass matrix, we find:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -214,103 +332,25 @@
     "\\end{pmatrix},\n",
     "\\end{aligned}\n",
     "$$\n",
-    "where we have used the fact that $\\psi_0(x_R) = \\psi_1(x_L) = 0$ and $\\psi_0(x_L) = \\psi_1(x_R) = 1$ to arrive at the third line."
+    "where we have used the fact that $\\psi_0(x_R) = \\psi_1(x_L) = 0$ and $\\psi_0(x_L) = \\psi_1(x_R) = 1$ to arrive at the third line.\n",
+    "\n",
+    "Below we define python functions to compute the mass/stiffness matrices and the flux term."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ec7c16cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#define imports\n",
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as pl\n",
-    "from scipy.integrate import quad\n",
-    "from numpy.linalg import inv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75398a57-59a7-4b62-8e6e-403062849010",
-   "metadata": {},
-   "source": [
-    "The equation we wish to solve can be written\n",
-    "$$\n",
-    "\\partial_t \\mathbf{a} = \\mathbf{M}^{-1} \\cdot (c \\mathbf{K} \\cdot \\mathbf{a} - \\mathbf{f}).\n",
-    "$$\n",
-    "In the cell below we define each of the quantities on the right-hand side."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "ee599630-584e-4f41-92a9-efd56a37c5f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define CFL\n",
-    "CFL = 0.05\n",
-    "\n",
-    "#define number of timesteps, TS\n",
-    "TS = 250\n",
-    "\n",
-    "#set up grid\n",
-    "xMax = 1.\n",
-    "xMin = 0.\n",
-    "\n",
-    "#define number of elements\n",
-    "N = 75\n",
-    "\n",
-    "#define size of a cell, dx\n",
-    "dx = (xMax-xMin)/N\n",
-    "dt = CFL * dx\n",
-    "\n",
-    "#index cells from k = 0 to N; cell boundary is at (k*dx, [k+1]*dx); define array of boundaries cbound\n",
-    "cbound = [k*dx for k in range(N+1)]\n",
-    "\n",
-    "#define wave speed c\n",
-    "c = 1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5153de77-bb74-4d9b-9247-9de9779a08da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#define basis functions\n",
-    "def psi0(xi):\n",
-    "    return 1-xi\n",
-    "\n",
-    "def psi1(xi):\n",
-    "    return xi\n",
-    "\n",
-    "#define analytic derivatives of basis functions\n",
-    "def psi0P(xi):\n",
-    "    return -1\n",
-    "\n",
-    "def psi1P(xi):\n",
-    "    return 1\n",
-    "\n",
-    "#define Jacobian\n",
-    "def J(xi):\n",
-    "    return dx\n",
-    "\n",
-    "#define x(k, xi)\n",
-    "def x(k, xi):\n",
-    "    return (k+xi)*dx\n",
-    "\n",
     "#define mass matrix; since the mass matrix is just a constant, this function\n",
     "#only needs to be called once and the result should be stored for the evolution\n",
     "def Mij():\n",
-    "    M00 = quad(lambda xi: J(xi)*psi0(xi)*psi0(xi), 0, 1)[0]\n",
-    "    M01 = quad(lambda xi: J(xi)*psi0(xi)*psi1(xi), 0, 1)[0]\n",
+    "    M00 = quad(lambda xi: J()*psi0(xi)*psi0(xi), 0, 1)[0]\n",
+    "    M01 = quad(lambda xi: J()*psi0(xi)*psi1(xi), 0, 1)[0]\n",
     "    M10 = M01\n",
-    "    M11 = quad(lambda xi: J(xi)*psi1(xi)*psi1(xi), 0, 1)[0]\n",
+    "    M11 = quad(lambda xi: J()*psi1(xi)*psi1(xi), 0, 1)[0]\n",
     "    return [[M00, M01],[M10, M11]]\n",
     "\n",
     "#define stiffness matrix; again, it is constant, so we only need to evaluate this\n",
@@ -332,7 +372,97 @@
     "def f(k, a_n):\n",
     "    f0 = -c*qt(k-1, 1, a_n)\n",
     "    f1 = c*qt(k, 1, a_n)\n",
-    "    return [f0, f1]\n",
+    "    return [f0, f1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0473e56e",
+   "metadata": {},
+   "source": [
+    "Let's check that the matrices give us what we expect, since we computed them analytically above and they're just constant matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "13449a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expected mass matrix:\n",
+      "[[0.00444444 0.00222222]\n",
+      " [0.00222222 0.00444444]]\n",
+      "\n",
+      "computed mass matrix:\n",
+      "[[0.00444444 0.00222222]\n",
+      " [0.00222222 0.00444444]]\n",
+      "\n",
+      "\n",
+      "expected stiffness matrix:\n",
+      "[[-0.5  0.5]\n",
+      " [-0.5  0.5]]\n",
+      "\n",
+      "computed stiffness matrix:\n",
+      "[[-0.5 -0.5]\n",
+      " [ 0.5  0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "expectedMassMatrix = dx/6. * np.array([[2, 1],[1, 2]])\n",
+    "print('expected mass matrix:')\n",
+    "print(np.array(expectedMassMatrix))\n",
+    "print()\n",
+    "print('computed mass matrix:')\n",
+    "print(np.matrix(Mij()))\n",
+    "print('\\n')\n",
+    "\n",
+    "expectedStiffnessMatrix = 0.5*np.array([[-1, 1],[-1, 1]])\n",
+    "print('expected stiffness matrix:')\n",
+    "print(np.array(expectedStiffnessMatrix))\n",
+    "print()\n",
+    "print('computed stiffness matrix:')\n",
+    "print(np.matrix(Kij()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "687f9a18",
+   "metadata": {},
+   "source": [
+    "## Build the rest of the solver\n",
+    "\n",
+    "Recall that we want to solve (3),\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation} \\tag{3}\n",
+    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( \\mathbf{F} - c \\, \\mathbf{a}_i \\cdot \\mathbf{K} \\Big).\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "We have all of the components, namely $\\mathbf{M}$ (which we will invert below), $\\mathbf{F}$, and $\\mathbf{K}$; all we need to do is initialize $\\mathbf{a}_i$, and to build the time stepper.\n",
+    "\n",
+    "Since we want the simplest possible solver, we'll be using the forward Euler method to evolve the solution foward through time.  At a given timestep, the forward Euler method only requires the most recent known time level (which we will index $n$) in order to construct the solution at the next time level ($n+1$).\n",
+    "\n",
+    "Below we initialize two coefficient matrices\n",
+    "\n",
+    "# here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5153de77-bb74-4d9b-9247-9de9779a08da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "#define RHS function\n",
     "def RHS(k, a_n, Minv, K):\n",
