--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "ec7c16cf",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "41c8e762",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "51336776",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "ee599630-584e-4f41-92a9-efd56a37c5f0",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "13449a79",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "3c131d34",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "5153de77-bb74-4d9b-9247-9de9779a08da",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "f4ff71bc-3d90-45c4-a94f-eead601cb59b",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "59354886-0adb-4d29-b1f3-9cbbbf1cfbc0",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "6f3c3f08",
    "metadata": {},
    "outputs": [],
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "22f50813",
    "metadata": {},
    "outputs": [],
@@ -696,14 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "fa83a149",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2240f98e0b634060808db82686ef9134",
+       "model_id": "34e2611c7ad24462978ef4d59c17b10f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -726,13 +726,15 @@
     "\n",
     "def plot_slider(timestep=0):\n",
     "    \n",
+    "    #plot numerical solution   \n",
+    "    coeffMatrix = sol[timestep]\n",
+    "    plot_soln(coeffMatrix)\n",
+    "    \n",
     "    #plot analytic solution\n",
     "    xx = np.linspace(xMin, xMax, 100)\n",
     "    pl.plot(xx, q_analytic(timestep*dt, xx), 'k:')\n",
     "    \n",
-    "    coeffMatrix = sol[timestep]\n",
-    "    plot_soln(coeffMatrix)\n",
-    "    \n",
+    "    #decorate plot\n",
     "    pl.xlabel('$x$')\n",
     "    pl.ylabel('$\\\\tilde{q}(t,x)$')\n",
     "    pl.ylim([-0.05, 1.05])"
