now working on DG_lagrange

--- a/DG_tutorial.ipynb
+++ b/DG_tutorial.ipynb
@@ -741,9 +741,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c42bd368",
+   "metadata": {},
+   "source": [
+    "It turns out that we need $N \\sim 75$ elements to get a decent solution."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baa6853c-800c-42d3-9b1c-0c9d55927ea8",
+   "id": "ed71d074",
    "metadata": {},
    "outputs": [],
    "source": []
