fixed bug in analytic solution

--- a/DG_lagrange.ipynb
+++ b/DG_lagrange.ipynb
@@ -464,7 +464,7 @@
     "def q_analytic(t, x):\n",
     "    #mod 1 to account for periodic boundary conditions\n",
     "    u = (x-c*t)%1\n",
-    "    return q_ID(x-c*t)"
+    "    return q_ID(u)"
    ]
   },
   {
