--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -5,7 +5,15 @@
    "id": "b1decb6f",
    "metadata": {},
    "source": [
-    "# DG tutorial Part 2: going to higher order"
+    "# DG tutorial Part 2: going to higher order\n",
+    "\n",
+    "### Sources:\n",
+    "\n",
+    "[1] \"An Introduction to Discontinuous Galerkin Methods\", by Josh Bevan (https://github.com/userjjb/22_6xx-DG-for-PDEs/tree/master)\n",
+    "\n",
+    "[2] \"Runge-Kutta Discontinuous Galerkin Methods for Convection-Dominated Problems\" by Bernardo Cockburn and Chi-Wang Shu\n",
+    "\n",
+    "[3] \"Finite Volume Methods for Hyperbolic Problems\" by Randall J. LeVeque"
    ]
   },
   {
