made some minor edits

--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -101,7 +101,7 @@
    "id": "306210ab",
    "metadata": {},
    "source": [
-    "### Deriving the discrete approximation\n",
+    "### Approximating the solution\n",
     "\n",
     "We will now consider a vector space $V$ spanned by a complete set of basis functions $\\psi_i$.  The fact that $V$ is complete implies that we can write our PDE solution $q$ as\n",
     "\n",
@@ -122,10 +122,18 @@
     "Furthermore, instead of checking all admissible test functions $\\phi$, we will only test the ones that can be written in terms of those $M+1$ basis functions; a simple choice, then, is to take\n",
     "\n",
     "$$\n",
-    "\\phi(x) \\equiv \\psi_j(x)\n",
+    "\\phi(\\xi) \\equiv \\psi_j(\\xi)\n",
     "$$\n",
     "\n",
-    "where $j$ runs from $0$ to $M$.\n",
+    "where $j$ runs from $0$ to $M$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "192732d4",
+   "metadata": {},
+   "source": [
+    "### Deriving the discrete approximation to the PDE\n",
     "\n",
     "Inserting the approximate solution $\\tilde{q}$ in for $q$ and the basis functions $\\psi_j$ in for $\\phi$ in (2) yields\n",
     "\n",
@@ -203,7 +211,7 @@
     "\n",
     "In this notebook we are focused on solving the 1D scalar advection equation with speed $c$.  We will restrict to the case where $c > 0$, which implies that the flow of $q$ is always to the right.\n",
     "\n",
-    "With this knowledge in mind, we will employ the _upwind flux function_, which just picks $\\hat{f}$ to be the flux on the left side of the interface:\n",
+    "With this knowledge in mind, we will employ the _upwind flux function_, which in this case just picks $\\hat{f}$ to be the flux on the left side of the interface:\n",
     "$$\n",
     "\\hat{f}_{k}(x_L) = c \\tilde{q}_{k-1}(x_R), ~~~ \\hat{f}_{k}(x_R) = c \\tilde{q}_{k}(x_R).\n",
     "$$"
