--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "$$\n",
     "\\begin{equation} \\tag{3}\n",
-    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( \\mathbf{F} - c \\, \\mathbf{a}_i \\cdot \\mathbf{K} \\Big),\n",
+    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( c \\, \\mathbf{a}_i \\cdot \\mathbf{K} - \\mathbf{F} \\Big),\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
@@ -530,7 +530,7 @@
     "\n",
     "$$\n",
     "\\begin{equation} \\tag{3}\n",
-    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( \\mathbf{F} - c \\, \\mathbf{a}_i \\cdot \\mathbf{K} \\Big).\n",
+    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( c \\, \\mathbf{a}_i \\cdot \\mathbf{K} - \\mathbf{F} \\Big),\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
